[package]
name = "ldaphound-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Parser for ADExplorer .dat snapshot files"

[lib]
name = "ldaphound_core"
path = "src/lib.rs"

[[bin]]
name = "ldaphound-cli"
path = "src/bin/cli.rs"

[dependencies]
memmap2 = "0.9"
thiserror = "2"
